--- a/src/components/dashboard/dashboard.css
+++ b/src/components/dashboard/dashboard.css
@@ -15,7 +15,7 @@
     align-items: center;
     justify-content: center;
     margin-bottom: 5px;
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
 }
 
 .navItemDB {
@@ -25,7 +25,7 @@
     align-items: center;
     justify-content: center;
     margin-bottom: 5px;
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
 }
 .navLinkDB {
     color: #37474f;
