--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,16 +1,17 @@
 .navbar{
     background: #ffffff;
     width: 100%;
-    border-radius: 0px 0px 10px 10px;
+    border-radius: 0 0 10px 10px;
     border-style: solid;
     border-color: #5d6d7e;
     border-width: 1px;
     display: flex;
     flex-direction: row;
     align-items: center;
-    position: fixed;
-    z-index: 2;
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    position: sticky;
+    z-index: 100;
+    top: 0;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
 }
 
 .nav-img{
@@ -23,7 +24,7 @@
 .navsearchcontainer {
     display: flex;
     flex-direction: row;
-    gap: 0px;
+    gap: 0;
     align-items: center;
     justify-content: flex-start;
     flex-shrink: 0;
