--- a/src/components/styles/body.css
+++ b/src/components/styles/body.css
@@ -1,5 +1,17 @@
-body{
+html, body {
+    height: 100%;
+    min-height: 100vh;
+}
+
+#root {
+    height: 100%;
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
+}
+
+main {
+    flex-grow: 1;
     min-height: 100vh;
+    position: relative;
 }
