--- a/src/components/mipedido/fullCart/fullCart.css
+++ b/src/components/mipedido/fullCart/fullCart.css
@@ -1,21 +1,23 @@
 .rectangle {
     border: 2px solid #99a3a4;
+    background-color: #f5f5f5;
     border-radius: 10px;
     margin: 10px;
     display: flex;
     flex-direction: column;
     padding: 20px;
-    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+    box-shadow: 0 2px 2px 0px rgba(0, 0, 0, 0.3);
 }
 
 .rectangle-btn {
     border: 2px solid #99a3a4;
+    background-color: #f5f5f5;
     border-radius: 10px;
     margin: 10px;
     display: flex;
     justify-content: center;
     padding: 20px;
-    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.25);
 }
 
 .btn-cart-shadow{
@@ -35,18 +37,20 @@
 .custom-input {
     font-size: 16px;
     padding: 10px;
-    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.25);
+    border: 1px solid rgb(33, 37, 42);
+    box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.25);
 }
 .custom-radio {
     display: inline-block;
     margin: 10px;
     padding: 10px;
     font-size: 18px;
-    border: 2px solid #99a3a4;
+    border: 1px solid rgb(33, 37, 42);
+    background-color: #fdfdfe;
     border-radius: 5px;
     cursor: pointer;
     transition: border-color 0.2s;
-    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.25);
+    box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.25);
 }
 
 .custom-radio .form-check-input[type="radio"] {
