--- a/src/components/mipedido/empyCart/empyCart.css
+++ b/src/components/mipedido/empyCart/empyCart.css
@@ -3,6 +3,7 @@
     height: calc(100vh - 40px); /* Subtract 20px top margin and 20px bottom margin */
     min-height: 800px;
     border: 2px solid #99a3a4;
+    background-color: #f5f5f5;
     border-radius: 10px;
     margin: 20px;
     display: flex;
