--- a/src/components/styles/table.css
+++ b/src/components/styles/table.css
@@ -23,3 +23,7 @@ td{
     border-bottom: rgba(112, 112, 112, 0.7) solid 2px;
     border-radius: 0;
 }
+
+.tr-miniTable{
+    border: rgba(255, 255, 255, 0.7) solid 2px;
+}
