--- a/src/components/mipedido/empyCart/empyCart.css
+++ b/src/components/mipedido/empyCart/empyCart.css
@@ -4,7 +4,7 @@
     min-height: 300px;
     max-height: 500px;
     border: 2px solid #99a3a4;
-    background-color: #f5f5f5;
+    background-color: #ffffff;
     border-radius: 10px;
     margin: 20px;
     display: flex;
