--- a/src/components/mipedido/fullCart/fullCart.css
+++ b/src/components/mipedido/fullCart/fullCart.css
@@ -1,17 +1,17 @@
 .rectangle {
     border: 2px solid #99a3a4;
-    background-color: #f5f5f5;
+    background-color: rgb(255, 255, 255);
     border-radius: 10px;
     margin: 10px;
     display: flex;
     flex-direction: column;
     padding: 20px;
-    box-shadow: 0 2px 2px 0px rgba(0, 0, 0, 0.3);
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.3);
 }
 
 .rectangle-btn {
     border: 2px solid #99a3a4;
-    background-color: #f5f5f5;
+    background-color: #ffffff;
     border-radius: 10px;
     margin: 10px;
     display: flex;
@@ -32,14 +32,25 @@
 
 .custom-label {
     font-size: 16px;
+    padding-top: 15px;
 }
 
 .custom-input {
+    background: rgb(255, 255, 255);
     font-size: 16px;
-    padding: 10px;
-    border: 1px solid rgb(33, 37, 42);
-    box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.25);
+    padding: 0;
+    border: 0;
+    border-bottom: 2px solid rgb(153, 163, 164);
+    border-radius: 0;
 }
+
+.custom-input:focus {
+    background: rgb(255, 255, 255);
+    box-shadow: none !important;
+    border-bottom: 2px solid #D32F2F;
+    outline: none;
+}
+
 .custom-radio {
     display: inline-block;
     margin: 10px;
