More Styles & Animations

--- a/src/components/styles/background.css
+++ b/src/components/styles/background.css
@@ -1,11 +1,11 @@
 .background-img{
-    background-image: url('public/img/background1.jpg');
+    background-image: url('/img/background1.jpg');
     background-size: auto;
     background-repeat: repeat;
 }
 
 .perfil-img{
-    background-image: url('public/img/miperfil-img.jpg');
+    background-image: url('/img/miperfil-img.jpg');
     background-size: auto;
     background-repeat: repeat;
 }
