--- a/src/components/styles/background.css
+++ b/src/components/styles/background.css
@@ -5,7 +5,7 @@
 }
 
 .perfil-img{
-    background-image: url('/img/miperfil-img.jpg');
+    background-image: url('/img/brownwood.jpg');
     background-size: auto;
     background-repeat: repeat;
 }
