--- a/src/components/styles/productCard.css
+++ b/src/components/styles/productCard.css
@@ -1,34 +1,85 @@
-.custom-card {
+.card-product{
+    min-height: 250px;
+    min-width: 250px;
+    max-width: 250px;
     box-shadow: 1px 2px 2px 1px rgba(0, 0, 0, 0.25);
-    transition: transform 0.3s;
-    overflow: hidden;
-    border: 2px solid #99a3a4;
-    background-color: rgba(245, 245, 245, 0.35);
+    transition: 0.3s linear;
 }
 
-.custom-card:hover {
-    transform: scale(1.05);
-    box-shadow: 0 0 2px 2px rgba(211, 47, 47, 0.3)
-    , 0 0 5px 2px rgba(211, 47, 47, 0.3)
-    , 0 0 10px 2px rgba(211, 47, 47, 0.3);
+.card-product:hover{
+    scale: 1.03;
+    box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.1)
+    , 0 0 5px 2px rgba(0, 0, 0, 0.1)
+    , 0 0 10px 2px rgba(0, 0, 0, 0.1);
 }
 
-.custom-card .btn-card {
-    position: relative;
-    left: -100%;
-    opacity: 0;
-    transition: left 0.3s, opacity 0.3s;
+.card-prod-img{
+    height: 200px;
+    object-fit: cover;
+    width: 100%;
 }
 
-.custom-card:hover .btn-card {
-    left: 0;
-    opacity: 1;
+.content{
+background: #f8f9fa;
+    padding: 0;
+    border-top: #d9d9d9 2px solid;
 }
 
-.custom-card .img-card{
-    transition: transform 0.3s; /* Add transition for the image */
+.text-card-cart{
+    margin-left: 10px;
+    margin-top: 5px;
 }
 
-.custom-card:hover .img-card {
-    transform: scale(1.15); /* Increase the size of the image by 10% */
+.text-card-add{
+    margin-left: 10px;
+    margin-top: 5px;
+}
+
+.icon-cart{
+    padding-left: 2px;
+    border-left: #d9d9d9 2px solid;
+    transition: 0.3s linear;
+}
+
+.icon-cart:hover{
+    background: #c6eccd;
+    scale: 1.03;
+}
+
+.icon-close{
+    padding-right: 2px;
+    transition: 0.3s linear;
+}
+
+.icon-close:hover{
+    background: #ec9b9b;
+    scale: 1.05;
+}
+
+.icon-check{
+    padding-right: 2px;
+    transition: 0.3s linear;
+}
+
+.icon-info{
+    display: flex;
+    position: absolute;
+    right: 0;
+    background: #4285F4;
+    margin: 8px;
+    padding: 4px;
+    border-radius: 24px;
+    z-index: 2;
+}
+
+.info-container{
+    height: 200px;
+    backdrop-filter: blur(3px);
+    background-color: rgba(255, 255, 255, 0.4);
+    display: flex;
+
+}
+
+.info-text{
+    margin: 48px 16px 16px;
 }
