--- a/src/components/styles/productCard.css
+++ b/src/components/styles/productCard.css
@@ -20,9 +20,9 @@
 }
 
 .content{
-background: #f8f9fa;
     padding: 0;
     border-top: #d9d9d9 2px solid;
+    transition: 0.3s linear;
 }
 
 .text-card-cart{
@@ -36,6 +36,7 @@ background: #f8f9fa;
 }
 
 .icon-cart{
+    background: #ececec;
     padding-left: 2px;
     border-left: #d9d9d9 2px solid;
     transition: 0.3s linear;
@@ -48,7 +49,7 @@ background: #f8f9fa;
 
 .icon-close{
     padding-right: 2px;
-    transition: 0.3s linear;
+    transition: opacity 0.3s ease-in-out;
 }
 
 .icon-close:hover{
@@ -58,24 +59,30 @@ background: #f8f9fa;
 
 .icon-check{
     padding-right: 2px;
-    transition: 0.3s linear;
+    transition: opacity 0.3s ease-in-out;
 }
 
 .icon-info{
     display: flex;
     position: absolute;
-    right: 0;
+    right: -50%;
     background: #4285F4;
     margin: 8px;
     padding: 4px;
     border-radius: 24px;
     z-index: 2;
+    transition: 0.3s ease-in;
+}
+
+.card-product:hover .icon-info {
+    display: flex;
+    right: 0;
 }
 
 .info-container{
     height: 200px;
     backdrop-filter: blur(3px);
-    background-color: rgba(255, 255, 255, 0.4);
+    background-color: rgba(255, 255, 255, 0.5);
     display: flex;
 
 }
