--- a/src/components/styles/productCard.css
+++ b/src/components/styles/productCard.css
@@ -6,13 +6,14 @@
 }
 
 .card-product:hover{
-    box-shadow: 0 0 1px 1px rgba(0, 0, 0, 0.2)
-    , 0 0 1px 1px rgba(0, 0, 0, 0.2)
-    , 0 0 1px 1px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 0 1px 1px rgba(166, 43, 43, 0.4)
+    , 0 0 1px 1px rgba(166, 43, 43, 0.4)
+    , 0 0 1px 1px rgba(166, 43, 43, 0.4);
 }
 
 .card-product:hover .body-cart-content{
-    background: #e3e3e3;
+    background: #ffffff;
+    border-top:  2px solid rgba(166, 43, 43, 0.4);
 }
 
 .card-prod-img{
@@ -23,6 +24,7 @@
 
 .body-cart-content{
     background: #ffffff;
+    border-top:  2px solid rgba(0, 0, 0, 0);
 }
 
 .custom-quantity{
@@ -31,4 +33,41 @@
     outline: none;
     box-shadow: none;
     border: 1px solid rgba(0, 0, 0, 0.5);
+}
+
+.icon-info{
+    display: flex;
+    position: absolute;
+    right: -50%;
+    background: #D32F2F;
+    margin: 8px;
+    padding: 4px;
+    border-radius: 24px;
+    z-index: 2;
+    transition: 0.3s ease-in;
+}
+
+.icon-info:hover{
+    scale: 1.15;
+}
+
+.card-product:hover .icon-info {
+    display: flex;
+    right: 0;
+}
+
+.product-detail-body{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.description-container {
+    overflow:auto;
+    max-height: 200px;
+}
+
+.description{
+    color: #5d6d7e;
+    word-wrap: break-word;
 }
