--- a/src/components/styles/background.css
+++ b/src/components/styles/background.css
@@ -2,6 +2,7 @@
     background-image: url('/img/background1.jpg');
     background-size: auto;
     background-repeat: repeat;
+    min-height: 100vh;
 }
 
 .perfil-img{
