--- a/src/components/mipedido/empyCart/empyCart.css
+++ b/src/components/mipedido/empyCart/empyCart.css
@@ -1,16 +1,16 @@
 .block {
-    width: calc(100vw - 60px); /* Subtract 20px left margin and 20px right margin */
-    height: calc(100vh - 40px); /* Subtract 20px top margin and 20px bottom margin */
-    min-height: 300px;
-    max-height: 500px;
-    border: 2px solid #99a3a4;
-    background-color: #ffffff;
-    border-radius: 10px;
-    margin: 20px;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    width: calc(100vw - 60px);
+    height: calc(100vh - 40px);
+    min-height: 300px;
+    max-height: 500px;
+    max-width: 80%;
+    border: 2px solid #99a3a4;
+    background-color: #ffffff;
+    border-radius: 10px;
 }
 
 .btnCart {
